== 0.4.5 / 2009-08-10

* Major enhancements

  * Ruby 1.9 compatibility (Michael Fellinger, Jakub Kuźma)
  * Improve performance (~2x) on JRuby by supporting Nokogiri
  * Added support for external app servers in selenium mode (basically don't start one) (Mike Gaffney)
  * Added support for uploading files for Merb (Ryan Carver)

* Minor enhancements

  * Upgrade to selenium-client to 1.2.16 (Brian Landau)
  * Upgrade selenium-server.jar to 1.0.1 (Brian Landau)
  * Make redirect detection work in the face of rational maths (like when ruby-units is active) (Piers Cawley)
  * Use Launchy to handle opening pages in the browser with cross-platform compatibility (Bryan Helmkamp)
  * Added support for field_labeled_locators ending in non word characters
    lh 148 (Zach Dennis)
  * Filled in tests on click link lh 195 (diabolo)
  * Added current_url to selenium session lh 215 (Luke Amdor)
  * Added silence spec to selenium lh 238 (Martin Gamsjaeger aka snusnu)
  * Added ability to configure the browser startup timeout for selenium lh 242 (Mike Gaffney, Mark Dodwell)
  * Added delegation for field_named lh194 (pivotal labs)
  * Added fix to keep from escaping field values in mechanize mode lh256 (jish)
  * Adding fixes for click button/link and made the integration specs pass for the same in selenium lh254 (Ldiehl, Matthias Marschall)
  * Adding clicking link by id in selenium mode lh221 (larrytheliquid)
  * Adding fix for have_selector and have_xpath in descendent blocks lh234 (Thomas Jack)
  * Adding fix for fields with labels with special characters (Thomas Jack, Mike Gaffney, Bryan Hemlkamp)
  * Deprecated current_page lh50 (Mike Gaffney)
  * Fixed issue with redirects and multiple hosts lh168 (Mutwin Kraus)

* Bug fixes

  * Wait for application servers socket on 0.0.0.0 instead of the application_address
  * Translate CSS and image paths with single quotes in save_and_open_page (Erin Staniland)

== 0.4.4 / 2009-04-06

* Major enhancements
